--- a/Assets/LinkedPages/yakshi3.css
+++ b/Assets/LinkedPages/yakshi3.css
@@ -13,7 +13,7 @@ body {
     }
 
 .photo {
-    background-image: url('../images/yakshi3.jpg');
+    background-image: url('../Images/yakshi3.jpg');
 background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: black;
