--- a/Assets/LinkedPages/devil.css
+++ b/Assets/LinkedPages/devil.css
@@ -1,5 +1,5 @@
 /*body {
-    background-image: url("../images/captive.jpg");
+    background-image: url("../Images/captive.jpg");
     background-repeat: no-repeat;
     background-color: #cccccc;
     background-size: 100% 100%;
