--- a/Assets/LinkedPages/devil3.css
+++ b/Assets/LinkedPages/devil3.css
@@ -13,7 +13,7 @@ body {
     }
 
 .photo {
-    background-image: url('../images/devil3.jpg');
+    background-image: url('../Images/devil3.jpg');
     background-size: 100% 140%;
     background-repeat: no-repeat;
     background-color: black;
