--- a/Assets/LinkedPages/deviltext.css
+++ b/Assets/LinkedPages/deviltext.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
     padding: 0;
     border: none;
-    background-image: url("../images/devil3.jpg");
+    background-image: url("../Images/devil3.jpg");
     background-size: 100% 140%;
     overflow: hidden;
     }
