--- a/Assets/LinkedPages/faces.css
+++ b/Assets/LinkedPages/faces.css
@@ -13,7 +13,7 @@ body {
 	}
 
 .photo {
-    background-image: url('../images/faces.jpg');
+    background-image: url('../Images/faces.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: black;
