--- a/Assets/LinkedPages/faces02.css
+++ b/Assets/LinkedPages/faces02.css
@@ -11,7 +11,7 @@ body {
 	padding: 0;
 	border: none;
 
-    background-image: url('../images/faces.jpg');
+    background-image: url('..Images/faces.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
@@ -21,12 +21,12 @@ body {
 /*.background {
     width: 100%;
     height: 100%;
-    background-image: url('../images/faces2.jpg');
+    background-image: url('../Images/faces2.jpg');
     background-repeat: no-repeat;
 }*/
 
 .photo {
-    background-image: url('../images/faces2.jpg');
+    background-image: url('../Images/faces2.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-blend-mode: screen;
