--- a/Assets/LinkedPages/faces04.css
+++ b/Assets/LinkedPages/faces04.css
@@ -3,7 +3,7 @@ body {
 	padding: 0;
 	border: none;
 
-    background-image: url('../images/faces3.png');
+    background-image: url('../Images/faces3.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
