--- a/Assets/LinkedPages/faces07.css
+++ b/Assets/LinkedPages/faces07.css
@@ -11,7 +11,7 @@ body {
     padding: 0;
     border: none;
 
-    background-image: url('../images/faces4.jpg');
+    background-image: url('../Images/faces4.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     width: 100%;
