--- a/Assets/LinkedPages/prayer.css
+++ b/Assets/LinkedPages/prayer.css
@@ -13,7 +13,7 @@ body {
 	}
 
 .photo {
-    background-image: url('../images/prayer.jpg');
+    background-image: url('../Images/prayer.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: black;
